gentoo.conf: set udevdir

--- a/dracut.conf.d/gentoo.conf.example
+++ b/dracut.conf.d/gentoo.conf.example
@@ -1,6 +1,8 @@
 # /etc/dracut.conf.d/gentoo.conf
 # Dracut config file customized for Gentoo Base System release 1
 
+udevdir=/lib/udev
+
 #
 # Modules
 #
